style(wip): landing page design

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@layer components {
+    img {
+        @apply object-cover object-center
+    }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+    .header {
+        @apply font-oliver
+    }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+    .padding {
+        @apply px-4 lg:px-[7%] xl:px-[10%]
+    }
 }
